--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Better Textures
 Another/More enemies?
-ship upgrades (Faster? More weapons? spread/shotgun machine gun, etc?)
-fix the big ship's texture
+Balance, make the game speed up as you go/as your weapon gets better
+Rewrite the timers
+fix the big ship and chest's textures (no clue why they're broken)
