Big enemies have 2 health, made difficulty increase as the game progresses (needs to be balanced, math is hard)

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 Better Textures
 Another/More enemies?
-Balance, make the game speed up as you go/as your weapon gets better
-Rewrite the timers
-fix the big ship and chest's textures (no clue why they're broken)
+Fix the balance
+Score/hi score
